--- a/Iniciando/HTML/index.html
+++ b/Iniciando/HTML/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <div id="sum">
-        <h1>Soma de valores</h1>
-        <input type="number" name="txt1" id="txt1"> +
-        <input type="number" name="txt2" id="txt2">
-        <input class="btn" type="button" value="=" onclick="somar()">
-        <div id="resultado">Resultado</div>
+    <div id="calculadora">
+        <h1 id="titulo">título do cálculo</h1>
+        <div class="internal">
+            <input type="number" name="txt1" id="txt1">
+            <h2 id="operacao"></h2>
+            <input type="number" name="txt2" id="txt2">
+            <input class="btn" type="button" value="=">
+        </div>
+        <div id="resultado"></div>
     </div>
-    <script type="text/javascript" src="../JS/index.js"></script>
+    <script type="text/javascript" src="../JS/script.js"></script>
 </body>
 </html>
