--- a/Iniciando/HTML/index.html
+++ b/Iniciando/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning JS</title>
+    <title>Calculadora JS</title>
 
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
@@ -17,6 +17,7 @@
             <input type="number" name="txt2" id="txt2">
             <input class="btn" type="button" value="=">
         </div>
+        <input class="btnReload" type="button"value="Recarregar">
         <div id="resultado"></div>
     </div>
     <script type="text/javascript" src="../JS/script.js"></script>
