--- a/formTelaLogin/index.html
+++ b/formTelaLogin/index.html
@@ -7,8 +7,8 @@
     <script src="https://kit.fontawesome.com/ec194e965a.js" crossorigin="anonymous"></script>
     <title>Form Login</title>
 
-    <link rel="shortcut icon" type="imagex/png" href="../IMG/entrar.png">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="shortcut icon" type="imagex/png" href="/IMG/entrar.png">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
     <form>
@@ -21,9 +21,9 @@
         <input type="submit" name="action" value="Entrar">
         <div class="divCadastro">
             <p id="cadastroP">Não tem conta? </p>
-            <a id="cadastroA" href="cadastro.html">Cadastre-se</a>
+            <a id="cadastroA" href="/HTML/cadastro.html">Cadastre-se</a>
         </div>
     </form>
-    <script src="script.js"></script>
+    <script src="/JS/script.js"></script>
 </body>
 </html>
