--- a/formTelaLogin/index.html
+++ b/formTelaLogin/index.html
@@ -17,11 +17,12 @@
         <input id="email" type="text" name="email" placeholder="Email">
         <label for="name"><i class="fas fa-key"></i></label>
         <label id="eye" for="name"><i class="fas fa-eye" aria-hidden='true'></i></label>
+        <label id="eyeSlash" for="name"><i class="fas fa-eye-slash" aria-hidden='true'></i></label>
         <input id="senha" type="password" name='senha' placeholder="Senha">
         <input type="submit" name="action" value="Entrar">
         <div class="divCadastro">
-            <p id="cadastroP">Não tem conta? </p>
-            <a id="cadastroA" href="/HTML/cadastro.html">Cadastre-se</a>
+            <p>Não tem conta? </p>
+            <a id="cadastroA" href="/pages/cadastro.html">Cadastre-se</a>
         </div>
     </form>
     <script src="/JS/script.js"></script>
